# jspsych-ado

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  draft-paper.yml
ado_service/: app.py  dd_engine.py
concepts/: division-of-labor.md  pretty-console-debug-logs.md
demos/: README.md
demos/_shared/: experiment_shell.js
demos/byo_model_exponential/: README.md  exp_config.js  index.html
demos/byo_task_money_choice/: index.html
demos/delay_discounting/: README.md  USAGE.md  dd_config.js  index.html
demos/halberda_dot_comparison/: README.md  halberda_config.js  index.html
demos/line_length_discrimination/: README.md  index.html  line_length_config.js
examples/parameter_recovery/: README.md  delay_discounting_random_recovery_settings.json  generate_random_recovery_settings.py  line_length_discrimination_random_recovery_settings.json  line_length_discrimination_settings.json  parameter_recovery.ipynb  parameter_recovery_browser.py
experiments/delay_discounting/: README.md  USAGE.md  dd_config.js  delay_discounting_timeline.js  (+1 more)
fixtures/: adopy_dd_reference.json
jspsych-ado/: index.js
paper/: README.md  body.tex  paper.tex
presentation/: 02-what-the-experiment-looks-like.md  demo-explanation.md  what-is-ado.md
src/: index.js  validation.js
tests/: TESTING.md  conftest.py  controllers.test.js  generate_fixtures.py  package.json  test_api.py  test_dd_engine.py  test_parity.py  test_recovery.py  timeline.test.js  utils.test.js
(+60 files in other folders)
