[project]
name = "jspsych-ado"
version = "0.1.0"
description = "jsPsych and JATOS scaffold for ADOpy-backed adaptive delay discounting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adopy==0.4.1",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pytest>=8.0.0",
    "scipy>=1.14.0",
    "uvicorn>=0.34.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["ado_service"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
